<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.app.iwitx.viewmodel.AndroidViewModel" />

    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="@dimen/DP20"
    tools:context=".ui.LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/DP150"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/DP10"
        android:orientation="vertical">
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textColor="@color/white"
       android:textSize="@dimen/SP30"
       android:textStyle="bold"
       android:text="@string/welcome"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DP10"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textSize="@dimen/SP18"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/DP10"
        android:paddingBottom="@dimen/DP10"
        android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:hint="@string/user"
                android:padding="@dimen/DP10"
                android:textColor="@color/black"
                android:inputType="text"
                android:textColorHint="@color/text_Gray"
                android:background="@drawable/edittext_background"
                android:text="@={data.userid}"
                android:layout_height="@dimen/DP50"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/DP50"
            android:layout_marginTop="@dimen/DP10"
            android:weightSum="2"
            android:padding="@dimen/DP10"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/edittext_background"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:textColorHint="@color/text_Gray"
                android:padding="@dimen/DP15"
                android:layout_weight="1"
                android:id="@+id/pass"
                android:background="@null"
                android:inputType="textPassword"
                android:text="@={data.password}"
                android:textColor="@color/black"
                android:layout_height="@dimen/DP50"/>
            <ImageView
                android:id="@+id/img_showpass"
                android:layout_width="@dimen/DP50"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_visibility_off_24"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:gravity="left"
        android:layout_marginTop="@dimen/DP10"
        android:textColor="@color/white"
        android:clickable="true"
        android:textSize="@dimen/SP16"
        android:layout_height="wrap_content"
        android:text="@string/forget_pass"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingLeft="@dimen/DP50"
        android:paddingRight="@dimen/DP50"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginRight="@dimen/DP10"
        android:textStyle="italic"
        android:onClick="@{(v) -> data.loggin(v)}"
        android:layout_marginTop="@dimen/DP10"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textSize="@dimen/SP18"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"
        android:layout_marginTop="@dimen/DP20"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:clickable="true"
            android:textSize="@dimen/SP18"
            android:layout_height="wrap_content"
            android:text="@string/register_text"/>

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/DP2"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:text="@string/register_now"
            android:textColor="@color/white"
            android:textSize="@dimen/SP18"
            android:textStyle="bold" />

    </LinearLayout>
    </LinearLayout>

</LinearLayout>

</layout>