<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.app.iwitx.viewmodel.AndroidViewModel" />

    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.ForgetPassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/DP10"
        android:layout_marginTop="@dimen/DP110"
        android:textSize="@dimen/DP30"
        android:textStyle="bold"
        android:text="@string/forget_pass"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/DP10"

        android:textColor="@color/black"
        android:layout_marginTop="@dimen/DP10"
        android:textSize="@dimen/DP15"
        android:text="@string/forget_text"/>


  <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/DP40"
        app:cardCornerRadius="@dimen/DP10"
      android:layout_margin="@dimen/DP10"
        android:elevation="@dimen/DP20"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/DP10"
        android:text="@={data.email}"
        android:hint="@string/email"
        android:layout_height="@dimen/DP50"/>

        </LinearLayout>

  </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="@dimen/DP150"
        android:layout_height="@dimen/DP50"
        android:layout_marginRight="@dimen/DP10"
        android:onClick="@{(v) -> data.forgetpass(v)}"
        android:background="@drawable/button_background"
        android:layout_marginTop="@dimen/DP40"
        android:layout_gravity="right"
        android:text="@string/register"/>


</LinearLayout>

</layout>