<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_margin="@dimen/DP10"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/DP10"
        android:layout_marginBottom="@dimen/DP10"
        android:textSize="@dimen/DP20"
        android:gravity="center"
        android:text="@string/services"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/money"
                android:layout_height="@dimen/DP50"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/cash_withdrawal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/statement"
                android:layout_height="@dimen/DP70"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/mini_statement"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_marginTop="@dimen/DP10"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:src="@drawable/balance"
                    android:layout_height="@dimen/DP50"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:gravity="bottom"
                    android:layout_gravity="center"
                    android:text="@string/balance_enquiry"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:src="@drawable/aadhar_pay"
                    android:layout_height="@dimen/DP70"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center|bottom"
                    android:text="@string/aadhar_pay"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:src="@drawable/money_transfer"
                    android:layout_height="@dimen/DP70"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:text="@string/dmt"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>