<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="data"
            type="com.app.iwitx.viewmodel.AndroidViewModel" />

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/DP10"
            android:background="@color/background"
            android:layout_height="match_parent"
            tools:context=".ui.KYCActivity">
            

                    <EditText
                        android:layout_width="match_parent"
                        android:hint="@string/name"
                        android:padding="@dimen/DP10"
                        android:layout_marginBottom="@dimen/DP10"
                        android:background="@drawable/edittext_background"
                        android:text="@={data.name}"
                        android:layout_height="@dimen/DP50"/>
            
            

                    <EditText
                        android:layout_width="match_parent"
                        android:hint="@string/dob"
                        android:padding="@dimen/DP10"
                        android:layout_marginBottom="@dimen/DP10"
                        android:background="@drawable/edittext_background"
                        android:text="@={data.dob}"
                        android:layout_height="@dimen/DP50"/>


                    <EditText
                        android:layout_width="match_parent"
                        android:hint="@string/gender"
                        android:padding="@dimen/DP10"
                        android:layout_marginBottom="@dimen/DP10"
                        android:background="@drawable/edittext_background"
                        android:text="@={data.gender}"
                        android:layout_height="@dimen/DP50"/>




                    <EditText
                        android:layout_width="match_parent"
                        android:hint="@string/aadhar"
                        android:padding="@dimen/DP10"
                      android:layout_marginBottom="@dimen/DP10"
                        android:background="@drawable/edittext_background"
                        android:text="@={data.aadhar}"
                        android:layout_height="@dimen/DP50"/>




                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/DP50"
                      android:layout_marginBottom="@dimen/DP10"
                        android:background="@drawable/edittext_background"
                        android:hint="@string/pan"
                        android:padding="@dimen/DP10"
                        android:text="@={data.pan}" />



                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/DP50"
                      android:layout_marginBottom="@dimen/DP10"
                        android:background="@drawable/edittext_background"
                        android:id="@+id/state"
                        android:padding="@dimen/DP10"/>



                    <Spinner
                        android:layout_width="match_parent"
                        android:padding="@dimen/DP10"
                        android:id="@+id/district"
                      android:layout_marginBottom="@dimen/DP10"
                        android:background="@drawable/edittext_background"
                        android:layout_height="@dimen/DP50"/>



                    <EditText
                        android:layout_width="match_parent"
                        android:hint="@string/vill"
                        android:padding="@dimen/DP10"
                      android:layout_marginBottom="@dimen/DP10"
                        android:background="@drawable/edittext_background"
                        android:text="@={data.vill}"
                        android:layout_height="@dimen/DP50"/>




                    <EditText
                        android:layout_width="match_parent"
                        android:hint="@string/address"
                        android:padding="@dimen/DP10"
                      android:layout_marginBottom="@dimen/DP10"
                        android:background="@drawable/edittext_background"
                        android:text="@={data.aadress}"
                        android:layout_height="@dimen/DP50"/>


                    <EditText
                        android:layout_width="match_parent"
                        android:hint="@string/pincode"
                        android:padding="@dimen/DP10"
                        android:inputType="number"
                        android:maxLength="5"
                      android:layout_marginBottom="@dimen/DP10"
                        android:background="@drawable/edittext_background"
                        android:text="@={data.pincode}"
                        android:layout_height="@dimen/DP50"/>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="@dimen/DP10"
                       android:background="@drawable/edittext_background"
                       android:padding="@dimen/DP10"
                       android:orientation="vertical">
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="Image1"
                           android:textSize="@dimen/SP16"
                           android:textColor="@color/background"/>
                       <ImageView
                           android:layout_width="match_parent"
                           android:layout_height="@dimen/DP100"
                           android:src="@drawable/add_image"/>
                   </LinearLayout>
                   <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/DP10"
                android:background="@drawable/edittext_background"
                android:padding="@dimen/DP10"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Image2"
                    android:textSize="@dimen/SP16"
                    android:textColor="@color/background"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/DP100"
                    android:src="@drawable/add_image"/>
            </LinearLayout>
                   <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/DP10"
                android:background="@drawable/edittext_background"
                android:padding="@dimen/DP10"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Image3"
                    android:textSize="@dimen/SP16"
                    android:textColor="@color/background"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/DP100"
                    android:src="@drawable/add_image"/>
            </LinearLayout>
                   <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/DP10"
                android:background="@drawable/edittext_background"
                android:padding="@dimen/DP10"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Image4"
                    android:textSize="@dimen/SP16"
                    android:textColor="@color/background"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/DP100"
                    android:src="@drawable/add_image"/>
            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:hint="@string/pincode"
                android:id="@+id/update"
                android:text="Button"
                android:background="@color/colorAccentstart"
                android:padding="@dimen/DP10"
                android:layout_height="@dimen/DP50"/>


        </LinearLayout>
    </ScrollView>

</layout>
